<resources>
    <string name="app_name">Wroclove Places</string>
    <string name="username">Username</string>
    <string name="menu_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_place_detail">PlaceDetailActivity</string>
    <string-array name="places">
        <item>Cathedral Island</item>
        <item>Centennial Hall</item>
        <item>Main Railway Station</item>
        <item>Market Square</item>
        <item>Town Hall</item>
    </string-array>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin nibhaugue, suscipit a,
        scelerisque sed, lacinia in, mi. Cras vel lorem. Etiam pellentesque aliquet tellus.
        Phasellus pharetra nulla ac diam.
    </string>
    <string name="backdrop">Backdrop image</string>
    <string name="description">Description</string>
    <string name="review">Review</string>
    <string name="msg_snackbar">I\'m snackbar!</string>
    <string name="msg_snackbar_action_string">Some action!</string>
    <string name="action">Action</string>
    <string name="msg_details_fab">I\'m fab!</string>
    <string name="title_activity_form">Login form</string>
    <string name="hint_email">Email address</string>
    <string name="hint_password">Password</string>
    <string name="action_login">Login</string>
    <string name="error_empty_pass">Enter password</string>
    <string name="error_invalid_email">Enter valid email</string>
    <string name="help">Help</string>
    <string name="msg_login_info">Help content</string>
    <string name="ok">OK</string>
    <string name="menu_help">Help</string>
    <string name="email">someone@email.com</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_share">Share</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_map">Map</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="forgot_password">I forgot my password</string>
    <string name="remember_password">Remember password</string>
</resources>
